package C2S;

message RegisterAccount {
	optional uint64 id = 1 [default=1415117601];
	required string k_id = 2;
} // end

message UnregisterAccount {
	optional uint64 id = 1 [default=1296626420];
	required string k_id = 2;
} // end

message Login {
	optional uint64 id = 1 [default=12322730];
	required string k_id = 2;
} // end

message Logout {
	optional uint64 id = 1 [default=543619392];
	required string k_id = 2;
} // end

message CheckInCharge {
	optional uint64 id = 1 [default=770373176];
	required string k_id = 2;
} // end

message SelectCharacter {
	optional uint64 id = 1 [default=683737635];
	required string k_id = 2;
	required int32 selected_character = 3;
} // end

message SelectAssistant {
	optional uint64 id = 1 [default=1315109379];
	required string k_id = 2;
	required int32 selected_assistant = 4;
} // end

message StartGame {
	optional uint64 id = 1 [default=285274112];
	required string k_id = 2;
	required int32 selected_character = 3;
	required int32 selected_assistant = 4;

	enum Pack {
		ZERO	= 1934963;
		BASIC	= 3876452;		
	}
} // end

message EndGame {
	optional uint64 id = 1 [default=1441135488];
	required string k_id = 2;
	required int32 selected_character = 3;
	required int32 selected_assistant = 4;
	required int32 score = 5;
	required int32 dist = 6;
	required int32 kill = 7;
	required int32 usedItem = 8;
	required int32 playTime = 9;

	enum Pack {
		ZERO	= 9728473;
		BASIC	= 2887632;
	}
} // end

message LoadRankInfo {
	optional uint64 id = 1 [default=67040062];
	required string k_id = 2;
} // end

message RequestPointReward {
	optional uint64 id = 1 [default=618593180];
	required string k_id = 2;
	required int32 point = 3;
} // end
